fix: fixes Invalid rows size error
https://jira.railsc.ru/browse/GOODS-4871

--- a/spec/fixtures/cassettes/read_productfolders.yml
+++ b/spec/fixtures/cassettes/read_productfolders.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.moysklad.ru/api/remap/1.2/entity/productfolder?limit=1000
+    uri: https://api.moysklad.ru/api/remap/1.2/entity/productfolder?limit=1000&offset=0
     body:
       encoding: US-ASCII
       string: ''
